Add second version of swagger. Yet not completed
