# backend/app/api/login.go
@@ -15,10 +15,23 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param        credentials  body  database.User  true  "Email и пароль"
+// @Success		 200 {Object} tokens_answer
+// @Failure		 405 {Object} error_answer
+// @Failure		 400 {Object} error_answer
+// @Failure		 500 {Object} error_answer
 // @Router       /login [post]
 func LoginHandler(w http.ResponseWriter, r *http.Request) {
 	log.Println("New connection!")
 	w.Header().Set("Content-Type", "application/json")
+
+	if r.Method != http.MethodPost {
+		w.WriteHeader(http.StatusMethodNotAllowed)
+		json.NewEncoder(w).Encode(error_answer{
+			Error: "Method not allowed",
+			Code:  http.StatusMethodNotAllowed,
+		})
+		return
+	}
 
 	var user database.User
 	// Try to decode message
@@ -27,8 +40,9 @@ func LoginHandler(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Println("Cannot decode request")
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(map[string]string{
-			"error": "Invalid JSON",
+		json.NewEncoder(w).Encode(error_answer{
+			Error: "Invalid JSON",
+			Code:  http.StatusBadRequest,
 		})
 		return
 	}
@@ -41,8 +55,9 @@ func LoginHandler(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Printf("Cannot write in database: %s", err)
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(map[string]string{
-			"error": "Account will not be found...",
+		json.NewEncoder(w).Encode(error_answer{
+			Error: "Account will not be found...",
+			Code:  http.StatusBadRequest,
 		})
 		return
 	}
@@ -51,8 +66,9 @@ func LoginHandler(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Printf("Cannot generate tokens: %s", err)
 		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(map[string]string{
-			"error": "Error generating tokens",
+		json.NewEncoder(w).Encode(error_answer{
+			Error: "Error generating tokens",
+			Code:  http.StatusInternalServerError,
 		})
 		return
 	}
@@ -61,15 +77,16 @@ func LoginHandler(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Printf("Cannot store refresh token: %s", err)
 		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(map[string]string{
-			"error": "Error saving refresh token",
+		json.NewEncoder(w).Encode(error_answer{
+			Error: "Error saving refresh token",
+			Code:  http.StatusInternalServerError,
 		})
 		return
 	}
 
-	resp := map[string]string{
-		"access_token":  accessToken,
-		"refresh_token": refreshToken,
+	resp := tokens_answer{
+		AccessToken:  accessToken,
+		RefreshToken: refreshToken,
 	}
 
 	// Send successful answer
