# backend/app/api/refresh_token.go
@@ -9,30 +9,37 @@ import (
 	"github.com/IU-Capstone-Project-2025/Smartify/backend/app/database"
 )
 
-type RefreshRequest struct {
-	RefreshToken string `json:"refresh_token"`
-}
-
-type TokenResponse struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
-}
-
 // @Summary      Обновление JWT-токена
 // @Description  Возвращает новую пару access/refresh токенов
 // @Tags         auth
 // @Accept       json
 // @Produce      json
+// @Param        credentials  body  refresh_token  true  "refresh token"
+// @Success		 200 {Object} tokens_answer
+// @Failure		 405 {Object} error_answer
+// @Failure		 400 {Object} error_answer
+// @Failure		 401 {Object} error_answer
+// @Failure		 500 {Object} error_answer
 // @Router       /refresh_token [post]
 func RefreshHandler(w http.ResponseWriter, r *http.Request) {
 	log.Println("New refresh request!")
 	w.Header().Set("Content-Type", "application/json")
 
-	var req RefreshRequest
+	if r.Method != http.MethodPost {
+		w.WriteHeader(http.StatusMethodNotAllowed)
+		json.NewEncoder(w).Encode(error_answer{
+			Error: "Method not allowed",
+			Code:  http.StatusMethodNotAllowed,
+		})
+		return
+	}
+
+	var req refresh_token
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(map[string]string{
-			"error": "Invalid request",
+		json.NewEncoder(w).Encode(error_answer{
+			Error: "Invalid request",
+			Code:  http.StatusBadRequest,
 		})
 		return
 	}
@@ -41,8 +48,9 @@ func RefreshHandler(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Println("Invalid refresh token type 1!")
 		w.WriteHeader(http.StatusUnauthorized)
-		json.NewEncoder(w).Encode(map[string]string{
-			"error": "Invalid refresh token",
+		json.NewEncoder(w).Encode(error_answer{
+			Error: "Invalid refresh token",
+			Code:  http.StatusUnauthorized,
 		})
 		return
 	}
@@ -51,8 +59,9 @@ func RefreshHandler(w http.ResponseWriter, r *http.Request) {
 	if err != nil || !valid || claims.UserID != userID {
 		log.Println("Invalid refresh token type 2!")
 		w.WriteHeader(http.StatusUnauthorized)
-		json.NewEncoder(w).Encode(map[string]string{
-			"error": "Refresh token expired or invalid",
+		json.NewEncoder(w).Encode(error_answer{
+			Error: "Refresh token expired or invalid",
+			Code:  http.StatusUnauthorized,
 		})
 		return
 	}
@@ -62,8 +71,9 @@ func RefreshHandler(w http.ResponseWriter, r *http.Request) {
 	accessToken, newRefreshToken, err := auth.GenerateTokens(userID)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(map[string]string{
-			"error": "Could not generate tokens",
+		json.NewEncoder(w).Encode(error_answer{
+			Error: "Could not generate tokens",
+			Code:  http.StatusInternalServerError,
 		})
 		return
 	}
@@ -71,19 +81,27 @@ func RefreshHandler(w http.ResponseWriter, r *http.Request) {
 	database.StoreRefreshToken(userID, newRefreshToken, db)
 
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(TokenResponse{
+	json.NewEncoder(w).Encode(tokens_answer{
 		AccessToken:  accessToken,
 		RefreshToken: newRefreshToken,
 	})
-
-	return
 }
 
+// @Summary      Обновление JWT-токена
+// @Description  Возвращает новую пару access/refresh токенов
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param        credentials  body refresh_token  true  "refresh token"
+// @Success		 200 {Object} success_answer
+// @Router       /refresh_token [post]
 func LogoutHandler(w http.ResponseWriter, r *http.Request) {
-	var req struct {
-		RefreshToken string `json:"refresh_token"`
-	}
+	var req refresh_token
 	json.NewDecoder(r.Body).Decode(&req)
 	database.DeleteRefreshToken(req.RefreshToken, db)
 	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(success_answer{
+		Status: "OK",
+		Code:   http.StatusOK,
+	})
 }
